design/css/style.css
/* ... */
.pop-user-detail .user .thumb img{width:100px;}
.other-member .list{margin-left:-20px;}
.other-member li .thumb img{max-width:100%;border:1px solid #ddd;}
.other-member li{ padding:10px 0 10px 20px; font-size:11px; vertical-align:top;width:16%; display:inline-block; box-sizing:content-box;max-width:110px}
.other-member li p,  .pop-user-detail .user p{margin:3px 0;}
.other-member .link, .address a{text-decoration:underline;}
#contRight .other-meetings li{padding-left:0; overflow:inherit;}
#contRight .other-meetings .info{border:0; padding:15px 20px;}
#contRight .rspvBox{position:inherit; margin-top:15px; border-top:1px solid #ddd; font-size:16px; padding:10px 0 20px; margin:0 20px; text-align:right;}
#contRight .rspvBox .date{display:inline; margin-right:3px;}
#contRight .rspvBox .date:after{content:","}
#contRight .rspvBox .rspv p{display:inline-block; margin:0;}
#contRight .rspvBox .rspv b{margin-right:10px;}
#contRight .meetingLabel{position:absolute; top:-13px; left:10%;}
.box-meeting .share {margin-bottom:10px;padding:5px 10px;position:absolute; top:17px; right:0;}
.box-meeting .share .btn{padding:0 5px; text-transform:capitalize; line-height:20px; font-size:11px; height:auto; vertical-align:top; margin-left:5px;}
.box-meeting .share .label{font-size:15px;text-align:right;margin-bottom:5px;}
.box-meeting .share .fb-share-button, .box-meeting .share .twitter-share, .box-meeting .share .email-share {display:inline-block; margin: 0 0 10px 5px;}
.box-meeting .share p{margin-top:0;}
.box-meeting .share .email-share img {height:20px;}
.box-meeting .share *{vertical-align:top;}
.box-meeting .share dd{display:inline-block; margin:5px; vertical-align:middle;}
.box-meeting .share .url{padding:20px; position:relative; background:#fff; overflow:hidden; margin:0;}
.box-meeting .share .url .link{color:#67bcdb;}
.box-meeting .share .url .btn{font-size:12px; text-transform:uppercase; height:auto; line-height:normal; padding:4px 23px 3px 20px; position:absolute; top:-3px; right:-3px; text-transform:lowercase;}
.creat-new{}
.creat-new .share {padding-top: 20px;}
.creat-new .share .label{font-size:18px; display:inline-block; margin:5px 0; margin-right:10px; float: left;}
.creat-new .share .fb-share-button, .creat-new .share .twitter-share, .creat-new .share .email-share {float: left; margin: 10px 5px 10px 5px;}
.creat-new .share .email-share img {height:20px;}
.creat-new .share dd{display:inline-block; margin:5px; vertical-align:middle;}
.creat-new .share .url{padding:20px; position:relative; background:#f8f4f0; overflow:hidden;}
.creat-new .share .url .link{color:#67bcdb;}
.creat-new .share .url .btn{font-size:12px; text-transform:uppercase; height:auto; line-height:normal; padding:4px 23px 3px 20px; position:absolute; top:-3px; right:-3px; text-transform:lowercase;}
.creat-new p.subtext{margin:0; font-size:11px; margin-top:-12px;}
.creat-new .option>li{font-size:16px; padding:10px 0;}
.creat-new .option>li label{font-size:16px;}
.creat-new .option>li .select-what{padding-bottom: 10px; display: inline-block;}
.creat-new .option .check-area{margin-top:10px;}
.creat-new .option .check-area span{display:inline-block; margin:0; min-width:230px; padding-bottom: 10px;}
.creat-new .frm-creat .row{padding:5px 0;}
.creat-new .title{font-size:24px;}
.modal{border-radius:6px; max-height:85%;}
.lean-overlay{top:0;}
.modal .icon-close{position:absolute; top:10px; right:2px; color: #ccc; width:30px; height:30px;}
.modal .icon-close .fa{font-size:18px;}
.timepicker-wrap .box-inner{display:inline-block; width:230px; height:38px; vertical-align:middle;}
.timepicker-wrap .box-inner .list-unstyled{margin: 0;}
.timepicker-wrap .table-condensed .btn-area{position:relative;}
.timepicker-wrap .table-condensed .btn-area .hour, .timepicker-wrap .table-condensed .btn-area .minute{position:absolute; left:50px; width:20px; height:19px; line-height:19px; padding-top:4px;}
.timepicker-wrap .table-condensed .btn-area .hour .fa, .timepicker-wrap .table-condensed .btn-area .minute .fa{font-size:17px; display:block; line-height:19px; text-align:center;}
.timepicker-wrap .middleRow .hour, .timepicker-wrap .middleRow .minute, .timepicker-wrap .middleRow .am-pm{display:inline-block; margin-right:8px;}
.timepicker-wrap .middleRow .am-pm{margin-right:0;}
.timepicker-wrap .middleRow .am-pm .btn{font-size:18px; height:38px; line-height:38px; float:left; background:none; border:1px solid #e5e5e5;color:#6b6b6b; padding:0 10px;}
.timepicker-wrap .middleRow .hour .timepicker-hour, .timepicker-wrap .middleRow .minute .timepicker-minute{float:left; width:80px; height:38px; line-height:38px; background:#fff; border:1px solid #e5e5e5; padding:0 10px; border-radius:4px; font-size:18px; color:#6b6b6b; font-weight:500;}
.timepicker-wrap .table-condensed .btn-area .minute{left:140px;}
.timepicker-wrap .bottomRow.btn-area .material-icons{line-height:9px !important;}
.timepicker-wrap .topRow.btn-area .material-icons{line-height:28px !important;}
.timepicker-wrap .bottomRow.btn-area .hour, .timepicker-wrap .bottomRow.btn-area .minute{top:-24px; padding:0 0 4px;}
.timepicker-wrap .bottomRow.btn-area .hour .fa, .timepicker-wrap .bottomRow.btn-area .minute .fa{line-height:12px;}
.timepicker-wrap .bottomRow.btn-area a{display:block;}
.timepicker-wrap .btn-area a:hover{text-decoration:none;}
.timepicker-hours, .timepicker-minutes{position:absolute; width:160px; border:1px solid #e5e5e5; padding:10px; border-radius:4px; z-index:99; background:#fff;}
.timepicker-hours td, .timepicker-minutes td{padding:10px; font-size:14px;}
.timepicker-hours td:hover, .timepicker-minutes td:hover{background:#f1f1f1;}
.timepicker-wrap .btn-add{font-size:16px; height:38px; line-height:36px; margin:5px 0}
.modal .box-white{border:1px solid #e5e5e5; border-radius:4px; font-size:16px; padding:10px;}
.modal .modal-footer{text-align:right; padding:10px 15px 0;}
.modal .modal-footer .btn{float:none;}
#modal-time.modal{max-width:500px; max-height:395px; height:85%;}
/* ... */

